...
    var body: some View {
        VStack(alignment: .center, spacing: 15) {
            HStack {
                Button(action: { dismiss() }) {
                    TopPanelBackButton(iconName: "chevron.backward")
                }
                .accessibilityIdentifier("vector.nav.back")
                    
                    Spacer()
                    
                    Button(action: {
                        undo()
                    }) {
...
                            .foregroundColor(.white)
                            .font(Font.system(size: 16).weight(.medium))
                            .frame(width: 60, height: 40)
                            .background(isDeletingPoints ? Color.green : Color.blue)
                            .cornerRadius(10)
                    }
                    .accessibilityIdentifier("vector.toggleDelete")
                    .disabled(!canAddPoints)
                }
                
                GeometryReader { geometry in
                    Canvas { context, _ in
                        
...
