...
    @State private var selectedImage: UIImage?
    
    var body: some View {
        VStack(alignment: .center, spacing: 15) {
            ZStack {
                Button(action: { dismiss() }) {
                    BottomPanelButton(iconName: "chevron.backward", text: "Back", isActive: false)
                    Spacer()
                }
                .accessibilityIdentifier("gallery.nav.back")
                .padding()
                Rectangle()
                    .frame(maxWidth: .infinity, maxHeight: 250)
...
